CSS - Alignment corrections of "Welcome" and "Logo"

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,5 @@
-.container {
+.container,
+.headerWelcome {
   display: flex;
   flex-direction: column;
   align-items: center;
